--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AKALANA DAHANAYAKE | Portfolio</title>
+  <title>SANYUKTHA AKALANA DAHANAYAKE | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -33,7 +33,7 @@
         <img src="images/profile.jpg" alt="SANYUKTHA AKALANA DAHANAYAKE">
       </div>
       <div class="hero-text" data-aos="fade-left">
-        <h1>SANYUKTHA AKALANA DAHANAYAKE</h1>
+        <h1>Moda SANYUKTHA AKALANA DAHANAYAKE</h1>
         <h2>Electrical and Electronic Engineer</h2>
         <p>Passionate about renewable energy, sustainable power systems, and intelligent energy management. </p>
         
