--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <img src="images/profile.jpg" alt="SANYUKTHA AKALANA DAHANAYAKE">
       </div>
       <div class="hero-text" data-aos="fade-left">
-        <h1>Moda SANYUKTHA AKALANA DAHANAYAKE</h1>
+        <h1>SANYUKTHA AKALANA DAHANAYAKE</h1>
         <h2>Electrical and Electronic Engineer</h2>
         <p>Passionate about renewable energy, sustainable power systems, and intelligent energy management. </p>
         
