--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
   <meta name="theme-color" content="#ffffff" />
 
   <!-- Structured Data: Person -->
+  <!-- Google Search Console verification: replace the content value with the code GSC gives you -->
+ <meta name="google-site-verification" content="M3fBe2EBLtu9e_-lX0_w9CmLcZ2aHG2l_cwLXrlrYZM" />
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
