--- a/index.html
+++ b/index.html
@@ -108,35 +108,106 @@
     <div class="experience-grid">
 
       <div class="experience-card" data-aos="fade-up">
-        <h3>Assistant Electrical Engineer – Hayleys Solar</h3>
-        <p><em>Jan 2025 – Present </em></p>
-        <ul>
-          <li>Delivered over 1.8 MW solar PV installations across Sri Lanka for NWSTB and industrial clients. </li>
-          <li>Led electrical system integration, AutoCAD design, inverter-string sizing, and commissioning activities.</li>
-          <li>Managed flagship projects: Sathosa Motors PLC (578 kW) and ESOFT Metro Campus (100 kW). </li>
-          <li>Oversaw design and execution for 14 NWSDB sites in the Central Region, totaling 786 kW.</li>
-        </ul>
+        
+        <div class="card-header">
+          <img src="images/logo-hayleys.png" alt="Hayleys Solar Logo" class="company-logo">
+          <div class="card-header-text">
+            <h3>Assistant Electrical Engineer</h3>
+            <p><strong>Hayleys Solar</strong> | <em>Jan 2025 – Present</em></p>
+          </div>
+        </div>
+
+        <div class="project-showcase">
+          <h4>Key Projects (Over 1.8 MW Delivered)</h4>
+
+          <div class="project-item">
+            <img src="images/project-sathosa.jpg" alt="Sathosa Motors Project" class="project-photo">
+            <div class="project-details">
+              <h5>Flagship Project: Sathosa Motors PLC</h5>
+              <p>Led electrical system integration, optimized wiring, and ensured IEC compliance for this 578 kW flagship rooftop project.</p>
+              <div class="site-tags">
+                <span>Site: Sathosa Motors PLC (578 kW)</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="project-item">
+            <img src="images/project-nwsdb-central.jpg" alt="NWSDB Central Region Project" class="project-photo">
+            <div class="project-details">
+              <h5>Category: NWSDB Central Region</h5>
+              <p>Oversaw design and execution for 14 sites, managing a cumulative capacity of 786 kW.</p>
+              <div class="site-tags">
+                <span>Hatton (40 kW)</span>
+                <span>Maskeliya (50 kW)</span>
+                <span>Nawalapitiya (60 kW)</span>
+                <span>Udathanna (90 kW)</span>
+                <span>Inamalua (90 kW)</span>
+                <span>...and 9 others</span>
+              </div>
+            </div>
+          </div>
+          
+          <div class="project-item">
+            <img src="images/project-nwsdb-western.jpg" alt="NWSDB Western North Project" class="project-photo">
+            <div class="project-details">
+              <h5>Category: NWSDB Western North Region</h5>
+              <p>Managed all four sites from design to commissioning, totaling 175 kW.</p>
+              <div class="site-tags">
+                <span>Veyangoda (40 kW)</span>
+                <span>Kadawatha (20 kW)</span>
+                <span>Ekala (35 kW)</span>
+                <span>Ja-Ela (80 kW)</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="project-item">
+            <img src="images/project-nwsdb-southern.jpg" alt="NWSDB Southern Region Project" class="project-photo">
+            <div class="project-details">
+              <h5>Category: NWSDB Southern Region</h5>
+              <p>Designed and supervised installations at Hallala and Kirama, totaling 140 kW.</p>
+              <div class="site-tags">
+                <span>Hallala (60 kW)</span>
+                <span>Kirama (80 kW)</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
 
       <div class="experience-card" data-aos="fade-up" data-aos-delay="100">
-        <h3>Electrical Engineering Trainee – Minel Lanka (Pvt) Ltd</h3>
-        <p><em>Jan 2024 – Mar 2024 </em></p>
+        <div class="card-header">
+          <img src="images/logo-minel.png" alt="Minel Lanka Logo" class="company-logo">
+          <div class="card-header-text">
+            <h3>Electrical Engineering Trainee</h3>
+            <p><strong>Minel Lanka (Pvt) Ltd</strong> | <em>Jan 2024 – Mar 2024</em></p>
+          </div>
+        </div>
+        <h4>Key Responsibilities</h4>
         <ul>
-          <li>Supported 132/33 kV transformer installations, performing SFRA and BDV testing. </li>
-          <li>Contributed to microgrid projects in Jaffna for island communities. </li>
-          <li>Conducted solar panel site assessments and designed wiring layouts. </li>
+          <li>Supported 132/33 kV transformer installations, performing SFRA and BDV testing.</li>
+          <li>Contributed to microgrid projects in Jaffna for island communities.</li>
+          <li>Conducted solar panel site assessments and designed wiring layouts.</li>
         </ul>
       </div>
 
       <div class="experience-card" data-aos="fade-up" data-aos-delay="200">
-        <h3>Electrical Engineering Trainee – Lanka Electricity Company (LECO)</h3>
-        <p><em>Oct 2023 – Dec 2023 </em></p>
+        <div class="card-header">
+          <img src="images/logo-leco.png" alt="LECO Logo" class="company-logo">
+          <div class="card-header-text">
+            <h3>Electrical Engineering Trainee</h3>
+            <p><strong>Lanka Electricity Company (LECO)</strong> | <em>Oct 2023 – Dec 2023</em></p>
+          </div>
+        </div>
+        <h4>Key Responsibilities</h4>
         <ul>
-          <li>Modeled poles, insulators, and fittings in SolidWorks for power distribution reliability. </li>
-          <li>Gained practical utility insights observing smart meter installations and transformer repairs. </li>
-          <li>Analyzed voltage fluctuation data and proposed network stability improvements. </li>
+          <li>Modeled poles, insulators, and fittings in SolidWorks for power distribution reliability.</li>
+          <li>Gained practical utility insights observing smart meter installations and transformer repairs.</li>
+          <li>Analyzed voltage fluctuation data and proposed network stability improvements.</li>
         </ul>
       </div>
+
     </div>
   </section>
 
