new changes photo sizing

--- a/index.html
+++ b/index.html
@@ -108,14 +108,15 @@
     <div class="experience-grid">
 
       <div class="experience-card" data-aos="fade-up">
-        
-        <div class="card-header">
-          <img src="images/logo-hayleys.png" alt="Hayleys Solar Logo" class="company-logo">
-          <div class="card-header-text">
-            <h3>Assistant Electrical Engineer</h3>
-            <p><strong>Hayleys Solar</strong> | <em>Jan 2025 – Present</em></p>
-          </div>
-        </div>
+       <div class="card-header">
+  <div class="card-header-text">
+    <h3>Assistant Electrical Engineer</h3>
+    <p class="company-line">
+      <strong>Hayleys Solar</strong> | <em>Jan 2025 – Present</em>
+      <img src="images/logo-hayleys.png" alt="Hayleys Solar Logo" class="company-logo"> 
+    </p>
+  </div>
+</div>
 
         <div class="project-showcase">
           <h4>Key Projects (Over 1.8 MW Delivered)</h4>
@@ -176,14 +177,16 @@
         </div>
       </div>
 
-      <div class="experience-card" data-aos="fade-up" data-aos-delay="100">
-        <div class="card-header">
-          <img src="images/logo-minel.png" alt="Minel Lanka Logo" class="company-logo">
-          <div class="card-header-text">
-            <h3>Electrical Engineering Trainee</h3>
-            <p><strong>Minel Lanka (Pvt) Ltd</strong> | <em>Jan 2024 – Mar 2024</em></p>
-          </div>
-        </div>
+    <div class="experience-card" data-aos="fade-up" data-aos-delay="100">
+  <div class="card-header">
+    <div class="card-header-text">
+      <h3>Electrical Engineering Trainee</h3>
+      <p class="company-line">
+        <strong>Minel Lanka (Pvt) Ltd</strong> | <em>Jan 2024 – Mar 2024</em>
+        <img src="images/logo-minel.png" alt="Minel Lanka Logo" class="company-logo">
+      </p>
+    </div>
+  </div>
         <h4>Key Responsibilities</h4>
         <ul>
           <li>Supported 132/33 kV transformer installations, performing SFRA and BDV testing.</li>
