new images sizing

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       <div class="experience-card" data-aos="fade-up">
        <div class="card-header">
   <div class="card-header-text">
-    <h3>Assistant Electrical Engineer</h3>
+    <h3>Hayleys Solar</h3>
     <p class="company-line">
-      <strong>Hayleys Solar</strong> | <em>Jan 2025 – Present</em>
+      <strong>Assistant Electrical Engineer</strong> | <em>Jan 2025 – Present</em>
       <img src="images/logo-hayleys.png" alt="Hayleys Solar Logo" class="company-logo"> 
     </p>
   </div>
@@ -180,9 +180,9 @@
     <div class="experience-card" data-aos="fade-up" data-aos-delay="100">
   <div class="card-header">
     <div class="card-header-text">
-      <h3>Electrical Engineering Trainee</h3>
+      <h3>Minel Lanka (Pvt) Ltd</h3>
       <p class="company-line">
-        <strong>Minel Lanka (Pvt) Ltd</strong> | <em>Jan 2024 – Mar 2024</em>
+        <strong>Electrical Engineering Trainee</strong> | <em>Jan 2024 – Mar 2024</em>
         <img src="images/logo-minel.png" alt="Minel Lanka Logo" class="company-logo">
       </p>
     </div>
@@ -199,8 +199,8 @@
         <div class="card-header">
           <img src="images/logo-leco.png" alt="LECO Logo" class="company-logo">
           <div class="card-header-text">
-            <h3>Electrical Engineering Trainee</h3>
-            <p><strong>Lanka Electricity Company (LECO)</strong> | <em>Oct 2023 – Dec 2023</em></p>
+            <h3>Lanka Electricity Company (LECO)</h3>
+            <p><strong>Electrical Engineering Trainee</strong> | <em>Oct 2023 – Dec 2023</em></p>
           </div>
         </div>
         <h4>Key Responsibilities</h4>
