--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
       <div class="experience-card" data-aos="fade-up">
        <div class="card-header">
+  <img src="images/logo-hayleys.png" alt="Hayleys Solar Logo" class="company-logo-small">
+  
   <div class="card-header-text">
-    <h3>Hayleys Solar</h3>
-    <p class="company-line">
-      <strong>Assistant Electrical Engineer</strong> | <em>Jan 2025 – Present</em>
-      <img src="images/logo-hayleys.png" alt="Hayleys Solar Logo" class="company-logo"> 
-    </p>
+    <h4>Hayleys Solar</h4> 
+    <p>Assistant Electrical Engineer | Jan 2025 – Present</p>
   </div>
 </div>
+    
 
         <div class="project-showcase">
           <h4>Key Projects (Over 1.8 MW Delivered)</h4>
@@ -179,14 +179,13 @@
 
     <div class="experience-card" data-aos="fade-up" data-aos-delay="100">
   <div class="card-header">
-    <div class="card-header-text">
-      <h3>Minel Lanka (Pvt) Ltd</h3>
-      <p class="company-line">
-        <strong>Electrical Engineering Trainee</strong> | <em>Jan 2024 – Mar 2024</em>
-        <img src="images/logo-minel.png" alt="Minel Lanka Logo" class="company-logo">
-      </p>
-    </div>
+  <img src="images/logo-minel.png" alt="Minel lanka Logo" class="company-logo-small">
+  
+  <div class="card-header-text">
+  <h4>Minel Lanka (Pvt) Ltd</h4>
+    <p>Electrical Engineering Trainee | Jan 2024 – Mar 2024</p>
   </div>
+</div>
         <h4>Key Responsibilities</h4>
         <ul>
           <li>Supported 132/33 kV transformer installations, performing SFRA and BDV testing.</li>
@@ -196,13 +195,15 @@
       </div>
 
       <div class="experience-card" data-aos="fade-up" data-aos-delay="200">
-        <div class="card-header">
-          <img src="images/logo-leco.png" alt="LECO Logo" class="company-logo">
-          <div class="card-header-text">
-            <h3>Lanka Electricity Company (LECO)</h3>
-            <p><strong>Electrical Engineering Trainee</strong> | <em>Oct 2023 – Dec 2023</em></p>
-          </div>
-        </div>
+       <div class="card-header">
+  <img src="images/logo-leco.png" alt="leco Solar Logo" class="company-logo-small">
+  
+  <div class="card-header-text">
+    <h4>Lanka Electricity Company (LECO)</h4>
+
+<p>Electrical Engineering Trainee | Oct 2023 – Dec 2023</p>
+  </div>
+</div>
         <h4>Key Responsibilities</h4>
         <ul>
           <li>Modeled poles, insulators, and fittings in SolidWorks for power distribution reliability.</li>
