--- a/index.html
+++ b/index.html
@@ -138,12 +138,20 @@
               <h5>Category: NWSDB Central Region</h5>
               <p>Oversaw design and execution for 14 sites, managing a cumulative capacity of 786 kW.</p>
               <div class="site-tags">
-                <span>Hatton (40 kW)</span>
-                <span>Maskeliya (50 kW)</span>
-                <span>Nawalapitiya (60 kW)</span>
-                <span>Udathanna (90 kW)</span>
-                <span>Inamalua (90 kW)</span>
-                <span>...and 9 others</span>
+                <span>Hatton Water Treatment plant (40 kW)</span>
+                <span>Nawalapitiya High-Lift Pump House (60 kW)</span>
+                <span>Udathanna Water Treatment Plant (90 kW)</span>
+                <span>Inamaluwa Booster Pump house (90 kW)</span>
+                <span>Intake of Greater Dambulla Water treatment plant (45 Kw)</span>
+                <span>Gonigoda Booster Pump House (30 kW)</span>
+                <span>Gohagoda Intake (35 kW)</span>
+                <span>Kehelwala Water Treatment Plant (40 kW)</span>
+                <span>Marassana Water Treatment Plant (40 kW)</span>
+                <span>Kandakaduwa Booster Pump house (25 kW)</span>
+                <span>Yatiwawala Booster Pump house (45 kW)</span>
+                <span>Paradeka Water Treatment Plant (50 kW)</span>
+                <span>Madarangoda Booster Pump house (25 kW)</span>
+                <span>Polgolla Water Treatment plant (40 kW)</span>
               </div>
             </div>
           </div>
@@ -154,10 +162,10 @@
               <h5>Category: NWSDB Western North Region</h5>
               <p>Managed all four sites from design to commissioning, totaling 175 kW.</p>
               <div class="site-tags">
-                <span>Veyangoda (40 kW)</span>
-                <span>Kadawatha (20 kW)</span>
-                <span>Ekala (35 kW)</span>
-                <span>Ja-Ela (80 kW)</span>
+                <span>Veyangoda Water Treatment plant (40 kW)</span>
+                <span>Kadawatha RSC Building (20 kW)</span>
+                <span>Ekala Pump House (35 kW)</span>
+                <span>Ja-Ela Area Engineer's Office (80 kW)</span>
               </div>
             </div>
           </div>
@@ -168,8 +176,8 @@
               <h5>Category: NWSDB Southern Region</h5>
               <p>Designed and supervised installations at Hallala and Kirama, totaling 140 kW.</p>
               <div class="site-tags">
-                <span>Hallala (60 kW)</span>
-                <span>Kirama (80 kW)</span>
+                <span>Hallala Water Treatment plant (60 kW)</span>
+                <span>Kirama Water Treatment plant (80 kW)</span>
               </div>
             </div>
           </div>
