--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
         </div>
 
         <div class="project-card" data-aos="fade-up" data-aos-delay="100">
-          <img src="https://sanyuktha10.github.io/Portfolio/images/cnc.jpg" alt="CNC Project">
+          <img src="https://sanyuktha10.github.io/Portfolio/images/cnc1.jpg" alt="CNC Project">
           <div class="project-content">
             <h3>Diagram Drawing Machine</h3>
             <p>Designed and built an Arduino-based CNC pen plotter. This individual project uses a CNC Shield and GRBL
